--- a/templates/pages/playlists.html.twig
+++ b/templates/pages/playlists.html.twig
@@ -1,6 +1,7 @@
 {% extends "basefront.html.twig" %}
 {% block body %}
     <table class="table table-striped">
+        <caption>table avec differents tris</caption>
         <thead>
             <tr>
                 <th class="text-left align-top" scope="col">
