MISSION 3 : Tâche 2 - Créer la documentation technique

--- a/templates/pages/accueil.html.twig
+++ b/templates/pages/accueil.html.twig
@@ -14,7 +14,7 @@
     <p>
         Voici les <strong>deux dernières formations</strong> ajoutées au catalogue :
         <table class="table">
-            <caption>Table présentant les deux dernières formations</caption>
+            <caption></caption>
             <tr>
                 {% for formation in formations %}
                     <td>
