--- a/templates/admin/admin.ajout.formations.html.twig
+++ b/templates/admin/admin.ajout.formations.html.twig
@@ -1,5 +1,5 @@
 {% extends "baseadmin.html.twig" %}
 
 {% block body %}
-    {{ include('_admin.formations.html.twig')}} }}
+    {{ include('_admin.formations.html.twig')}} 
 {% endblock %}
